Two more real fixtures, and fix the ordering bug the second one exposed
Answering a fair question: were the surviving mutations caused by having
only one source stream? Partly - and separating the cases is the useful
part.

The pointer-field survival was a fixture limitation. sample.ts has a
16-byte PAT and a 26-byte PMT, both of which fit one packet, so no section
ever spans one. The stuffing-terminator survival was not: removing that
check is genuinely harmless because the next pointer field recovers, and
no fixture would ever catch it.

But the sharpest gap was neither. A hand-built input written by whoever
wrote the parser encodes the same belief as the parser. PesHeaderTest
builds a timestamp with the same understanding of the 33-bit marker-bit
layout that PesHeader reads it with, so a shared misreading passes both.
PTS was safe, because ffprobe decodes the same bytes independently and
agreed on 128090. DTS had no such witness, because sample.ts contains no
DTS at all - zero packets where it differs from the PTS.

So bframes.ts, x264 with -bf 2: all fifty video packets carry a real DTS,
reordered against the PTS, and ffprobe says the first is pts 133200 dts
126000. The reading turns out to be right, which is the good outcome, but
it is now witnessed rather than assumed. multiprogram.ts adds two programs
on two PMT PIDs so PID attribution is tested against more than one
program.

The new fixture immediately found a real bug, and it was mine.
ProgramAssociationTable and ProgramMap built their maps with Map.copyOf,
which deliberately randomises iteration order per JVM run - so the
javadoc's "in the order the PAT lists them" was simply false, and any
order-sensitive consumer would be intermittently wrong. It passed on
first run and failed on the next. Both now use an unmodifiable
LinkedHashMap, which makes the documented order true rather than weakening
the assertion. Restoring Map.copyOf fails in roughly half of runs, which
is exactly the coin flip two entries sho